@@ -1,3 +1,9 @@
+2011-04-30  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	* dump-prase-tree.c (show_code_node):  Set the current
+	namespace to the BLOCK before displaying it; restore
+	afterwards.
+
 2011-04-30  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/48821
